test_suite/tests/ui/opts/crate_arg_with_invalid_path.stderr
error: expected path
 --> tests/ui/opts/crate_arg_with_invalid_path.rs:4:19
  |
4 | #[funcmap(crate = "not a path")]
  |                   ^^^^^^^^^^^^
