test_suite/tests/ui/opts/crate_arg_with_invalid_path.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
#[funcmap(crate = "not a path")]
struct Test<T>(T);

fn main() {}
